--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<table>
+  <tr>
+    <th>Roll Number</th>
+    <th>Name</th>
+  </tr>
+  <tr>
+    <td>123</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>456</td>
+    <td>Mexico</td>
+  </tr>
+</table>
 </body>
 
 </html>
