--- a/main.html
+++ b/main.html
@@ -11,10 +11,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<table>
-  <tr>
+  <thead><tr>
     <th>Roll Number</th>
     <th>Name</th>
-  </tr>
+  </tr> </thead>
+		<tbody>
   <tr>
     <td>123</td>
     <td>Germany</td>
@@ -22,7 +23,7 @@
   <tr>
     <td>456</td>
     <td>Mexico</td>
-  </tr>
+  </tr></tbody>
 </table>
 </body>
 
